<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_add_marker"
        android:icon="@drawable/ic_action_add_marker"
        android:title="@string/menu_add_marker"
        app:showAsAction="always" />

    <item android:id="@+id/menu_set_reference_point"
        android:icon="@android:drawable/ic_menu_mylocation"
        android:title="@string/menu_reference_point"
        app:showAsAction="collapseActionView"/>

    <item android:id="@+id/menu_remove_remote_markers"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/menu_remove_remote_markers"
        app:showAsAction="collapseActionView"/>

    <item android:id="@+id/menu_remove_local_markers"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/menu_remove_local_markers"
        app:showAsAction="collapseActionView"/>

    <item android:id="@+id/menu_search_remote_map"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/menu_search_remote_map"
        app:showAsAction="collapseActionView"/>

</menu>