<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <group >
        <item
            android:id="@+id/menu_maps"
            android:icon="@drawable/ic_map_white_48dp"
            android:title="@string/drawer_maps" />

        <item
            android:id="@+id/menu_import"
            android:icon="@drawable/marker_image_150"
            android:title="@string/drawer_import" />

        <item
            android:id="@+id/menu_export"
            android:icon="@drawable/marker_image_150"
            android:title="@string/drawer_export" />

        <item
            android:id="@+id/menu_settings"
            android:icon="@drawable/marker_image_150"
            android:title="@string/settings" />
    </group>

</menu>